[workspace]
members = ["prometric-derive", "prometric"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chainbound/prom-derive"
exclude = [".claude/", ".github/"]

[workspace.dependencies]
# Metrics
prometheus = "0.14.0"

# Macro
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
darling = "0.21"
