[package]
name = "prometric-derive"
description = "Derive macro for generating Prometheus metrics."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
exclude = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# Metrics
prometheus = { workspace = true }

# Macro
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
prometric = { path = "../prometric" }
hyper-util = { version = "0.1.17", features = ["tokio", "client-legacy", "http1"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt", "time"] }


[package.metadata]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lib]
proc-macro = true
