[package]
name = "prometric"
description = "Metric types to use with the prometric-derive crate."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
exclude = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prometheus = { workspace = true }

# Exporter
hyper = { version = "1.7.0", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1.17", optional = true, features = ["tokio"] }
tokio = { version = "1.40.0", optional = true, features = ["net", "rt"] }

# Process
sysinfo = { version = "0.37.2", optional = true }

[features]
default = ["exporter", "process"]
exporter = ["dep:hyper", "dep:hyper-util", "dep:tokio"]
process = ["dep:sysinfo"]
